--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en" >
 <head>
@@ -54,6 +53,10 @@
     </script> 
 <!-- partial -->
   <script  src="./script.js"></script>
+
+<footer>
+  <p>&copy; Copyright Nong Thai Thuan - Online since: <span id="onlineSince"></span></p>
+</footer>
 
 </body>
 </html>
